--- a/rakib.html
+++ b/rakib.html
@@ -14,7 +14,9 @@
     <h2>Where is my job</h2>
     <h2>Who can i find my job</h2>
     <h2>I need a job as soon as possible</h2>
-    
+    <img src="picturs/rakib.jpg" alt="">
+    <img src="picturs/rakib4.jpg" alt="">
+
 
 </body>
 </html>
